#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([lavender], [0.2.0], [crs.chin@gmail.com])
AC_CONFIG_SRCDIR([lavender.c])
AC_CONFIG_HEADERS(config.h)

AM_INIT_AUTOMAKE([1.10])


# Checks for programs.
AC_PROG_CC
AC_PROG_CC_C_O
AC_PROG_LIBTOOL
AC_PROG_SED

# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_create], ,[AC_MSG_ERROR([pthread lib check failed])])
AC_CHECK_LIB([rt], [pthread_mutex_lock], ,[AC_MSG_ERROR([rt lib check failed])])
AC_CHECK_LIB([z], [pthread_mutex_lock], ,[AC_MSG_ERROR([zlib check failed])])
AC_CHECK_LIB([notify], [notify_notification_new], ,[AC_MSG_ERROR([notify check failed])])

# Checks for header files.
AC_FUNC_ALLOCA
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h malloc.h netinet/in.h stddef.h stdint.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h sys/signalfd.h zlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDC
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([notify_notification_new_with_status_icon])
AC_CHECK_FUNCS([bzero clock_gettime inet_ntoa memmove memset realpath regcomp select socket strdup strtol pipe2 getline readlinkat])
AC_CHECK_MEMBER([struct ucred.pid], [AC_DEFINE([HAVE_ST_UCRED], 1, [have struct ucred defined])])

# modules check
PKG_CHECK_MODULES([GTK], [gtk+-2.0 > 2.12])
PKG_CHECK_MODULES([NOTIFY], [libnotify >= 0.5.0])
PKG_CHECK_MODULES([GIO], [gio-2.0 >= 2.24.2])

AC_DEFINE([NDEBUG], 1, [defined to disable debug code])

AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(NOTIFY_CFLAGS)
AC_SUBST(NOTIFY_LIBS)
AC_SUBST(GIO_CFLAGS)
AC_SUBST(GIO_LIBS)

AC_DEFINE([CONFIG_STAT_DIR], "/var/run/", [Cactus default stat file dir])
AC_DEFINE([CONFIG_STAT_FILE], PACKAGE_NAME ".stat", [Cactus default state file name])
AC_DEFINE([CONFIG_RULE_DIR], "/var/lib/" PACKAGE_NAME "/", [Cactus default rule list path])
AC_DEFINE([CONFIG_RULE_FILE], "rule.list", [Cactus default rule file name])
AC_DEFINE([CONFIG_PID_LOCK], "/var/run/" PACKAGE_NAME ".pid", [Cactus pid lock file path])
AC_DEFINE([CONFIG_LOG_FILE_PATH], "/var/log/" PACKAGE_NAME, [Cactus log directory])
AC_DEFINE([CONFIG_LOG_FILE_PREFIX], PACKAGE_NAME, [Cactus log file prefix])

AC_CONFIG_FILES([Makefile
                cactus/Makefile
                res/Makefile])
AC_OUTPUT
